--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently --kill-others \"heroku local\" \"npm run start\"",
-    "postinstall": "npm install && npm run build"
+    "dev": "concurrently --kill-others \"heroku local\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +37,6 @@
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
